--- a/source/form.html
+++ b/source/form.html
@@ -10,10 +10,18 @@
 <body>
   <div class="page-container">
     <header class="page-header">
-      <nav class="main-nav page-header__menu">
+      <nav class="main-nav main-nav--opened-simple">
+        <a class="logo logo__link">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img src="img/logo-sedona-mobile.svg" width="188" height="97" alt="Логотип сайта Седона">
+          </picture>
+        </a>
+        <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav--opened" href="index.html">Главная</a>
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="photo.html">Фото и видео</a>
@@ -25,16 +33,6 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
           </li>
         </ul>
-        <a class="logo logo__link" href="index.html">
-          <picture>
-            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-            <img src="img/logo-sedona-mobile.svg" width="188" height="97" alt="Логотип сайта Седона">
-          </picture>
-        </a>
-        <div class="main-nav__wrapper">
-          <button class="main-nav__button main-nav--closed" type="button"><img class="main-nav__image" src="img/icon-menu.svg" width="23" height="22" alt="Кнопка меню"></button>
-        </div>
       </nav>
     </header>
     <main>
@@ -74,18 +72,14 @@
                     <ul class="form__group-list">
                       <li class="form__group-item form__item-contacts">
                         <label class="form__group-title form__title-phone" for="phone-number"><span>Контактный</span> телефон*:</label>
-                        <div class="form__group-content form__group-phone">
-                          <input class="form__field form__field-phone" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
-                        </div>
+                        <input class="form__field form__field-phone" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
                         </li>
                         <li class="form__group-item form__item-contacts">
                           <label class="form__group-title form__title-email" for="email">Электронная почта*:</label>
-                        <div class="form__group-content form__group-email">
                           <input class="form__field form__field-email" id="email" name="email" type="email" placeholder="Введите e-mail" required>
-                        </div>
-                      </li>
+                        </li>
                     </ul>
-                </div>
+                  </div>
               </fieldset>
             </div>
             <div class="form__wrapper form__wrapper--impression">
