--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,18 @@
 <body>
   <div class="page-container">
     <header class="page-header">
-      <nav class="main-nav page-header__menu">
+      <nav class="main-nav main-nav--opened-simple">
+        <a class="logo logo__link">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img src="img/logo-sedona-mobile.svg" width="188" height="97" alt="Логотип сайта Седона">
+          </picture>
+        </a>
+        <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav--opened" href="#">Главная</a>
+            <a class="main-nav__link" href="#">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="photo.html">Фото и видео</a>
@@ -24,16 +32,6 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
           </li>
         </ul>
-        <a class="logo logo__link">
-          <picture>
-            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-            <img src="img/logo-sedona-mobile.svg" width="188" height="97" alt="Логотип сайта Седона">
-          </picture>
-        </a>
-        <div class="main-nav__wrapper">
-          <button class="main-nav__button main-nav--closed" type="button"><img class="main-nav__image" src="img/icon-menu.svg" width="23" height="22" alt="Кнопка меню"></button>
-        </div>
       </nav>
     </header>
     <main>
