--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
   <div class="page-container">
     <header class="page-header">
       <nav class="main-nav main-nav--opened-simple">
-        <a class="logo logo__link">
+        <a class="logo logo__link" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
@@ -88,15 +88,15 @@
                   <div class="form__group-wrapper">
                     <ul class="form__group-list">
                       <li class="form__group-item">
-                        <input class="form__radio visually-hidden" id="positive" type="radio" name="positive" value="positive" checked>
+                        <input class="form__radio visually-hidden" id="positive" type="radio" name="impression" value="positive" checked>
                         <label class="form__radio-title" for="positive">Скорее положительное</label>
                       </li>
                       <li class="form__group-item">
-                        <input class="form__radio visually-hidden" id="negative" type="radio" name="negative" value="negative">
+                        <input class="form__radio visually-hidden" id="negative" type="radio" name="impression" value="negative">
                         <label class="form__radio-title" for="negative">Скорее отрицательное</label>
                       </li>
                       <li class="form__group-item">
-                        <input class="form__radio visually-hidden" id="neutral" type="radio" name="neutral" value="neutral">
+                        <input class="form__radio visually-hidden" id="neutral" type="radio" name="impression" value="neutral">
                         <label class="form__radio-title" for="neutral">Затрудняюсь ответить</label>
                       </li>
                     </ul>
@@ -177,13 +177,13 @@
     <div class="pop-up pop-up--failure">
       <h2 class="pop-up__title">Что-то пошло не так!</h2>
       <p class="pop-up__text">Проверьте поля, выделенные красным, скорее всего вы<br> забыли их заполнить</p>
-      <button class="button pop-up__button ">Ok</button>
+      <button class="button pop-up__button" type="button">Ok</button>
     </div>
     <div class="pop-up pop-up--success">
       <h2 class="pop-up__title">Ваш отзыв отправлен!</h2>
       <p class="pop-up__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br> В ближайшее время мы опубликуем его на сайте.</p>
       <div class="pop-up__wrapper">
-        <button class="button pop-up__button">Закрыть окно</button>
+        <button class="button pop-up__button" type="button">Закрыть окно</button>
       </div>
     </div>
   </div>
