--- a/source/photo.html
+++ b/source/photo.html
@@ -11,7 +11,7 @@
   <div class="page-container">
     <header class="page-header">
       <nav class="main-nav main-nav--opened-simple">
-        <a class="logo logo__link">
+        <a class="logo logo__link" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
@@ -165,7 +165,9 @@
             <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg" alt="Видео">
           </picture>
           <div class="commercial__scrolling">
-            <div class="commercial__scrolling-slider"></div>
+            <div class="commercial__scrolling-slider">
+              <div class="commercial__scrolling-toggle"></div>
+            </div>
           </div>
           <div class="commercial__scrolling-images">
             <button class="commercial__scrolling-button" type="button">
