--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,9 @@
           <p class="commercial__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="button commercial__link" href="#">Найти гостиницу</a>
         </div>
-        <div class="commercial__map"><span class="visually-hidden">Карта, на которой указано местоположение Седоны</span></div>
+        <div class="commercial__map"><span class="visually-hidden">Карта, на которой указано местоположение Седоны</span>
+          <iframe class="commercial__interactive-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.1805059477!2d-111.83015783952044!3d34.85437338107749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1526900222351" width="1200" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
