--- a/source/form.html
+++ b/source/form.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+  <div style="display:none">
+    <include src="build/img/sprite.svg"></include>
+  </div>
   <div class="page-container">
     <header class="page-header">
       <nav class="main-nav main-nav--opened-simple">
@@ -51,11 +54,11 @@
                     <ul class="form__group-list">
                       <li class="form__group-item">
                         <label class="form__group-title" for="name">Имя*:</label>
-                        <input class="form__field form__field-name" id="name" name="name" type="text" placeholder="Петр" required>
+                        <input class="form__field form__field-name" id="name" name="name" type="text" placeholder="Петр" required="">
                       </li>
                       <li class="form__group-item">
                         <label class="form__group-title" for="sername">Фамилия*:</label>
-                        <input class="form__field form__field-sername" id="sername" name="name" type="text" placeholder="Иванов" required>
+                        <input class="form__field form__field-sername" id="sername" name="name" type="text" placeholder="Иванов" required="">
                       </li>
                       <li class="form__group-item">
                         <label class="form__group-title" for="patronym">Отчество:</label>
@@ -72,11 +75,11 @@
                     <ul class="form__group-list">
                       <li class="form__group-item form__item-contacts">
                         <label class="form__group-title form__title-phone" for="phone-number"><span>Контактный</span> телефон*:</label>
-                        <input class="form__field form__field-phone" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
+                        <input class="form__field form__field-phone" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required="">
                         </li>
                         <li class="form__group-item form__item-contacts">
                           <label class="form__group-title form__title-email" for="email">Электронная почта*:</label>
-                          <input class="form__field form__field-email" id="email" name="email" type="email" placeholder="Введите e-mail" required>
+                          <input class="form__field form__field-email" id="email" name="email" type="email" placeholder="Введите e-mail" required="">
                         </li>
                     </ul>
                   </div>
@@ -88,7 +91,7 @@
                   <div class="form__group-wrapper">
                     <ul class="form__group-list">
                       <li class="form__group-item">
-                        <input class="form__radio visually-hidden" id="positive" type="radio" name="impression" value="positive" checked>
+                        <input class="form__radio visually-hidden" id="positive" type="radio" name="impression" value="positive" checked="">
                         <label class="form__radio-title" for="positive">Скорее положительное</label>
                       </li>
                       <li class="form__group-item">
@@ -109,15 +112,15 @@
                   <div class="form__group-wrapper">
                     <ul class="form__group-list">
                       <li class="form__group-item">
-                        <input class="form__checkbox visually-hidden" id="bridge" type="checkbox" name="bridge" value="bridge" checked>
+                        <input class="form__checkbox visually-hidden" id="bridge" type="checkbox" name="bridge" value="bridge" checked="">
                         <label class="form__checkbox-title form__checkbox-bridge" for="bridge">Мост Дьявола</label>
                       </li>
                       <li class="form__group-item">
-                        <input class="form__checkbox visually-hidden" id="mountain" type="checkbox" name="mountain" value="mountain" checked>
+                        <input class="form__checkbox visually-hidden" id="mountain" type="checkbox" name="mountain" value="mountain" checked="">
                         <label class="form__checkbox-title form__checkbox-mountain" for="mountain">Гора-Колокол</label>
                       </li>
                       <li class="form__group-item">
-                        <input class="form__checkbox visually-hidden" id="park" type="checkbox" name="park" value="park" checked>
+                        <input class="form__checkbox visually-hidden" id="park" type="checkbox" name="park" value="park" checked="">
                         <label class="form__checkbox-title form__checkbox-park" for="park">Слайд-парк</label>
                       </li>
                       <li class="form__group-item">
@@ -168,9 +171,7 @@
       <div class="copyright">
         <p class="copyright__content">Разработано</p>
         <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-            <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
-          </svg>
+          <svg width="26.943px" height="34.09px"><use xlink:href="#sprite-logo-htmlacademy"></use></svg>
         </a>
       </div>
     </footer>
