--- a/source/photo.html
+++ b/source/photo.html
@@ -8,9 +8,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <div style="display:none">
-    <include src="build/img/sprite.svg"></include>
-  </div>
   <div class="page-container">
     <header class="page-header">
       <nav class="main-nav main-nav--opened-simple">
@@ -60,7 +57,7 @@
                 <span class="promo-photo__subtitle">Автор фото: Борис</span>
               </div>
               <div class="promo-photo__like">
-                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="#sprite-icon-like"></use></svg>
+                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/ite.svg#ite-icon-like"></use></svg>
                 <span class="promo-photo__like-number">1350</span>
               </div>
             </div>
@@ -79,7 +76,7 @@
                 <span class="promo-photo__subtitle">Автор фото: Сергей</span>
               </div>
               <div class="promo-photo__like">
-                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="#sprite-icon-like"></use></svg>
+                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/ite.svg#sprite-icon-like"></use></svg>
                 <span class="promo-photo__like-number">143</span>
               </div>
             </div>
@@ -98,7 +95,7 @@
                 <span class="promo-photo__subtitle">Автор фото: Петр</span>
               </div>
               <div class="promo-photo__like">
-                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="#sprite-icon-like"></use></svg>
+                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-like"></use></svg>
                 <span class="promo-photo__like-number">96</span>
               </div>
             </div>
@@ -117,7 +114,7 @@
                 <span class="promo-photo__subtitle">Автор фото: Антон</span>
               </div>
               <div class="promo-photo__like">
-                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="#sprite-icon-like"></use></svg>
+                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-like"></use></svg>
                 <span class="promo-photo__like-number">254</span>
               </div>
             </div>
@@ -142,13 +139,13 @@
           </div>
           <div class="commercial__scrolling-images">
             <button class="commercial__scrolling-button" type="button">
-              <svg class="commercial__image-replay" width="16px" height="20px"><use xlink:href="#sprite-icon-video-replay"></use></svg>
+              <svg class="commercial__image-replay" width="16px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-video-replay"></use></svg>
             </button>
             <button class="commercial__scrolling-button" type="button">
-              <svg class="commercial__image-subtitles" width="32px" height="20px"><use xlink:href="#sprite-icon-video-subtitles"></use></svg>
+              <svg class="commercial__image-subtitles" width="32px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-video-subtitles"></use></svg>
             </button>
             <button class="commercial__scrolling-button" type="button">
-              <svg class="commercial__image-fullscreen" width="20px" height="20px"><use xlink:href="#sprite-icon-video-fullscreen"></use></svg>
+              <svg class="commercial__image-fullscreen" width="20px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-video-fullscreen"></use></svg>
             </button>
           </div>
         </div>
@@ -182,7 +179,7 @@
       <div class="copyright">
         <p class="copyright__content">Разработано</p>
         <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg width="26.943px" height="34.09px"><use xlink:href="#sprite-logo-htmlacademy"></use></svg>
+          <svg width="26.943px" height="34.09px"><use xlink:href="img/sprite.svg#ite-logo-htmlacademy"></use></svg>
         </a>
       </div>
     </footer>
