--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <div style="display:none">
-    <include src="build/img/sprite.svg"></include>
-  </div>
   <div class="page-container">
     <header class="page-header">
       <nav class="main-nav main-nav--opened-simple">
@@ -147,7 +144,7 @@
       <div class="copyright">
         <p class="copyright__content">Разработано</p>
         <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg width="26.943px" height="34.09px"><use xlink:href="#sprite-logo-htmlacademy"></use></svg>
+          <svg width="26.943px" height="34.09px"><use xlink:href="img/sprite.svg#sprite-logo-htmlacademy"></use></svg>
         </a>
       </div>
     </footer>
