--- a/source/photo.html
+++ b/source/photo.html
@@ -57,7 +57,7 @@
                 <span class="promo-photo__subtitle">Автор фото: Борис</span>
               </div>
               <div class="promo-photo__like">
-                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/ite.svg#ite-icon-like"></use></svg>
+                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-like"></use></svg>
                 <span class="promo-photo__like-number">1350</span>
               </div>
             </div>
@@ -76,7 +76,7 @@
                 <span class="promo-photo__subtitle">Автор фото: Сергей</span>
               </div>
               <div class="promo-photo__like">
-                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/ite.svg#sprite-icon-like"></use></svg>
+                <svg class="promo-photo__like-icon" width="22px" height="20px"><use xlink:href="img/sprite.svg#sprite-icon-like"></use></svg>
                 <span class="promo-photo__like-number">143</span>
               </div>
             </div>
