--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="page-container">
     <header class="page-header">
-      <nav class="main-nav main-nav--opened-simple"><!--Для реализации с JS классы main-nav--opened main-nav--closed-->
+      <nav class="main-nav main-nav--opened-simple"><!--Для реализации с JS классы main-nav с модификаторами opened и closed-->
         <a class="logo logo__link">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
@@ -50,9 +50,9 @@
             <p class="reason__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <picture class="reason__image reason__image-order">
-            <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg, img/main-city-desktop@2x.jpg">
-            <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg, img/main-city-tablet@2x.jpg">
-            <img src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg" alt="Вид на классический мотель Дикого Запада">
+            <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+            <img src="img/main-city-mobile@2x.jpg" srcset="img/main-city-mobile@1x.jpg" alt="Вид на классический мотель Дикого Запада">
           </picture>
         </div>
         <ul class="advantages advantages__list">
@@ -78,9 +78,9 @@
             <p class="reason__text">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно</p>
           </div>
           <picture class="reason__image">
-            <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg, img/main-bridge-desktop@2x.jpg">
-            <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg, img/main-bridge-tablet@2x.jpg">
-            <img src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg" alt="Узкий каменный мостик над живописной пропастью">
+            <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+            <img src="img/main-bridge-mobile@2x.jpg" srcset="img/main-bridge-mobile@1x.jpg" alt="Узкий каменный мостик над живописной пропастью">
           </picture>
         </div>
         <div class="reasons__reason-description">
@@ -114,7 +114,7 @@
           <a class="button commercial__link" href="search.html">Найти гостиницу</a>
         </div>
         <div class="commercial__map"><span class="visually-hidden">Карта, на которой указано местоположение Седоны</span>
-          <iframe class="commercial__interactive-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.1805059477!2d-111.83015783952044!3d34.85437338107749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1526900222351" width="1200" height="350" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+          <iframe class="commercial__interactive-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.1805059477!2d-111.83015783952044!3d34.85437338107749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1526900222351" width="1200" height="350" style="border:0" allowfullscreen=""></iframe>
         </div>
       </section>
     </main>
