--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
             <a class="main-nav__link" href="photo.html">Фото и видео</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Форма отзыва</a>
+            <a class="main-nav__link main-nav__link--current" href="#">Форма отзыва</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
@@ -147,23 +147,20 @@
       <ul class="social">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="#">
-            <div class="social__image">
-              <span class="visually-hidden">Твиттер</span>
-            </div>
+            <svg class="social__image" width="17.5px" height="14.663px"><use xlink:href="img/sprite.svg#sprite-icon-twitter"></use></svg>
+            <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--fb" href="#">
-            <div class="social__image">
-              <span class="visually-hidden">Фэйсбук</span>
-            </div>
+            <svg class="social__image" width="8.672px" height="18.944px"><use xlink:href="img/sprite.svg#sprite-icon-facebook"></use></svg>
+            <span class="visually-hidden">Фэйсбук</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="#">
-            <div class="social__image">
-              <span class="visually-hidden">Ютюб</span>
-            </div>
+            <svg class="social__image" width="19.979px" height="14.015px"><use xlink:href="img/sprite.svg#sprite-icon-youtube"></use></svg>
+            <span class="visually-hidden">Ютюб</span>
           </a>
         </li>
       </ul>
