--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
         <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Главная</a>
+            <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="photo.html">Фото и видео</a>
@@ -123,23 +123,20 @@
       <ul class="social">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="#">
-            <div class="social__image">
-              <span class="visually-hidden">Твиттер</span>
-            </div>
+            <svg class="social__image" width="17.5px" height="14.663px"><use xlink:href="img/sprite.svg#sprite-icon-twitter"></use></svg>
+            <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--fb" href="#">
-            <div class="social__image">
-              <span class="visually-hidden">Фэйсбук</span>
-            </div>
+            <svg class="social__image" width="8.672px" height="18.944px"><use xlink:href="img/sprite.svg#sprite-icon-facebook"></use></svg>
+            <span class="visually-hidden">Фэйсбук</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="#">
-            <div class="social__image">
-              <span class="visually-hidden">Ютюб</span>
-            </div>
+            <svg class="social__image" width="19.979px" height="14.015px"><use xlink:href="img/sprite.svg#sprite-icon-youtube"></use></svg>
+            <span class="visually-hidden">Ютюб</span>
           </a>
         </li>
       </ul>
