--- a/source/form.html
+++ b/source/form.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="preload" href="fonts/PTSans.woff2" as="font">
+  <link rel="preload" href="fonts/PTSansBold.woff2" as="font">
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script defer src="js/picturefill.min.js"></script>
   <script defer src="js/svgxuse.min.js"></script>
