--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="preload" href="fonts/PTSans.woff2" as="font">
+  <link rel="preload" href="fonts/PTSansBold.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script defer src="js/picturefill.min.js"></script>
   <script defer src="js/svgxuse.min.js"></script>
@@ -50,8 +53,11 @@
             <p class="reason__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <picture class="reason__image reason__image-order">
-            <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@2x.webp 2x, img/main-city-desktop@1x.webp 1x">
+            <source media="(min-width: 1200px)" srcset="img/main-city-desktop@2x.jpg 2x, img/main-city-desktop@1x.jpg 1x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@2x.webp 2x, img/main-city-tablet@1x.webp 1x">
+            <source media="(min-width: 768px)" srcset="img/main-city-tablet@2x.jpg 2x, img/main-city-tablet@1x.jpg 1x">
+            <source type="image/webp" media="(min-width: 320px)" srcset="img/main-city-mobile@2x.webp 2x, img/main-city-mobile@1x.webp 1x">
             <img src="img/main-city-mobile@2x.jpg" srcset="img/main-city-mobile@1x.jpg" alt="Вид на классический мотель Дикого Запада">
           </picture>
         </div>
@@ -78,8 +84,11 @@
             <p class="reason__text">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно</p>
           </div>
           <picture class="reason__image">
-            <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@2x.webp 2x, img/main-bridge-desktop@1x.webp 1x">
+            <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@2x.jpg 2x, img/main-bridge-desktop@1x.jpg 1x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@2x.webp 2x, img/main-bridge-tablet@1x.webp 1x">
+            <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@2x.jpg 2x, img/main-bridge-tablet@1x.jpg 1x">
+            <source type="image/webp" media="(min-width: 320px)" srcset="img/main-bridge-mobile@2x.webp 2x, img/main-bridge-mobile@1x.webp 1x">
             <img src="img/main-bridge-mobile@2x.jpg" srcset="img/main-bridge-mobile@1x.jpg" alt="Узкий каменный мостик над живописной пропастью">
           </picture>
         </div>
