--- a/source/photo.html
+++ b/source/photo.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="preload" href="fonts/PTSans.woff2" as="font">
+  <link rel="preload" href="fonts/PTSansBold.woff2" as="font">
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script defer src="js/picturefill.min.js"></script>
   <script defer src="js/svgxuse.min.js"></script>
@@ -48,9 +50,12 @@
           <div class="promo-photo promo-photo--first">
             <a class="promo-photo__link" href="img/photo-sunset-desktop@1x.jpg">
               <picture class="promo-photo__image">
-                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                <img src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg" alt="Закат с видом на шоссе и горы">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@2x.webp 2x, img/photo-sunset-desktop@1x.webp 1x">
+                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@2x.jpg 2x, img/photo-sunset-desktop@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@2x.webp 2x, img/photo-sunset-tablet@1x.webp 1x">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@2x.jpg 2x, img/photo-sunset-tablet@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 320px)" srcset="img/photo-sunset-mobile@2x.webp 2x, img/photo-sunset-mobile@1x.webp 1x">
+                <img src="img/photo-sunset-mobile@2x.jpg" srcset="img/photo-sunset-mobile@1x.jpg" alt="Закат с видом на шоссе и горы">
               </picture>
             </a>
             <div class="photo__meta">
@@ -67,8 +72,11 @@
           <div class="promo-photo">
             <a class="promo-photo__link" href="img/photo-cactus-desktop@1x.jpg">
               <picture class="promo-photo__image">
-                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@2x.webp 2x, img/photo-cactus-desktop@1x.webp 1x">
+                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@2x.jpg 2x, img/photo-cactus-desktop@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@2x.webp 2x, img/photo-cactus-tablet@1x.webp 1x">
                 <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 320px)" srcset="img/photo-cactus-mobile@2x.webp 2x, img/photo-cactus-mobile@1x.webp 1x">
                 <img src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg" alt="Желтый кактус на фоне скал">
               </picture>
             </a>
@@ -86,9 +94,12 @@
           <div class="promo-photo">
             <a class="promo-photo__link" href="img/photo-roads-desktop@1x.jpg">
               <picture class="promo-photo__image">
-                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                <img src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg" alt="Дорога в горном лесу:вид сверху">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@2x.webp 2x, img/photo-roads-desktop@1x.webp 1x">
+                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@2x.jpg 2x, img/photo-roads-desktop@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@2x.webp 2x, img/photo-roads-tablet@1x.webp 1x">
+                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@2x.jpg 2x, img/photo-roads-tablet@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 320px)" srcset="img/photo-roads-mobile@2x.webp 2x, img/photo-roads-mobile@1x.webp 1x">
+                <img src="img/photo-roads-mobile@2x.jpg" srcset="img/photo-roads-mobile@1x.jpg" alt="Дорога в горном лесу:вид сверху">
               </picture>
             </a>
             <div class="photo__meta">
@@ -105,9 +116,12 @@
           <div class="promo-photo">
             <a class="promo-photo__link" href="img/photo-bridge-desktop@1x.jpg">
               <picture class="promo-photo__image">
-                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
-                <img src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg" alt="Мост над пропастью">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@2x.webp 2x, img/photo-bridge-desktop@1x.webp 1x">
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@2x.jpg 2x, img/photo-bridge-desktop@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@2x.webp 2x, img/photo-bridge-tablet@1x.webp 1x">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@2x.jpg 2x, img/photo-bridge-tablet@1x.jpg 1x">
+                <source type="image/webp" media="(min-width: 320px)" srcset="img/photo-bridge-mobile@2x.webp 2x, img/photo-bridge-mobile@1x.webp 1x">
+                <img src="img/photo-bridge-mobile@2x.jpg" srcset="img/photo-bridge-mobile@1x.jpg" alt="Мост над пропастью">
               </picture>
             </a>
             <div class="photo__meta">
@@ -131,9 +145,12 @@
           </div>
           <div class="commercial__video-block">
             <picture class="commercial__video">
-              <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-              <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg" alt="Видео">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@2x.webp 2x, img/video-desktop@1x.webp 1x">
+              <source media="(min-width: 1200px)" srcset="img/video-desktop@2x.jpg 2x, img/video-desktop@1x.jpg 1x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@2x.webp 2x, img/video-tablet@1x.webp 1x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet@2x.jpg 2x, img/video-tablet@1x.jpg 1x">
+              <source type="image/webp" media="(min-width: 320px)" srcset="img/video-mobile@2x.webp 2x, img/video-mobile@1x.webp 1x">
+              <img src="img/video-mobile@2x.jpg" srcset="img/video-mobile@1x.jpg" alt="Видео">
             </picture>
             <div class="commercial__scrolling">
               <div class="commercial__scrolling-slider">
